[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hip3radar"
version = "0.1.0"
description = "Python SDK for the HIP3Radar API — real-time risk surveillance for every Hyperliquid native + HIP-3 perp market."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "HIP3Radar", email = "hello@hip3radar.xyz" }]
keywords = ["hyperliquid", "hip3", "risk", "perpetuals", "defi", "monitoring"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://hip3radar.xyz"
Documentation = "https://hip3radar.xyz/docs"
Repository = "https://github.com/edgardextra-lang/hip3radar-site"
Changelog = "https://hip3radar.xyz/changelog"
